A project that is compatible with Java 11